# mpesa-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_transactions.py  0002_add_transaction_idempotency_key.py  0003_create_audit_events.py  0004_add_provider_fields_to_transactions.py
app/: __init__.py  config.py  main.py
app/analytics/: service.py
app/approvals/: models.py  repository.py  routes.py  service.py
app/audit/: logger.py  repository.py
app/auth/: security.py
app/bootstrap/: container.py
app/callbacks/: __init__.py  handlers.py  replay.py  routes.py
app/daraja/: __init__.py  auth.py  balance.py  client.py  stk_push.py  transaction_status.py
app/logging/: __init__.py  config.py
app/mcp/: schemas.py  server.py  tools.py
app/observability/: health.py  metrics.py  tracing.py
app/operator/: __init__.py  routes.py  ui.py
app/payments/: __init__.py  providers.py
app/policy/: __init__.py  tool_policy.py
app/rate_limit/: limiter.py
app/receipts/: __init__.py  generator.py
app/reconciliation/: __init__.py  service.py
app/safety/: __init__.py  policy.py  risk.py
app/services/: payment_service.py  receipt_service.py  transaction_service.py
app/storage/: __init__.py  database.py  (+2 more)
docs/: demo-guide.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
scripts/: run_mcp_server.py  smoke_mcp_tools.py  start_app.py
(+54 files in other folders)
