[project]
name = "mpesa-mcp-server"
version = "0.1.0"
description = "A modular MCP server that enables AI agents to safely interact with M-Pesa/Daraja APIs."
readme = "README.md"
authors = [
    { name = "Breezy Kalama" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic",
    "asyncpg",
    "fastapi",
    "httpx",
    "mcp",
    "psycopg[binary]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "sqlalchemy",
    "uvicorn",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "ruff",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
package = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = []

[tool.mypy]
python_version = "3.12"
files = ["app", "tests"]
plugins = []
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
